--- a/StagingSite.specs/StagingSite.specs.csproj
+++ b/StagingSite.specs/StagingSite.specs.csproj
@@ -77,7 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ContactUsPage.cs" />
-    <Compile Include="ContactUsPageSteps.cs" />
+    <Compile Include="StepDefinitions\ContactUsPageSteps.cs" />
     <Compile Include="NavigationSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScenarioBeforeAndAfter.cs" />
